[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.50.0",
    "requests>=2.32.5",
    "owslib>=0.34.1",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
]
